--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body  {
     box-shadow: 0px 5px 15px 1px rgba(0,0,0,0.3);
 }
 
-.table_button {
+/* .table_button {
    border-radius: 100%; 
    width: 65px; 
    height: 65px; 
@@ -77,14 +77,45 @@ body  {
    transition: all 0.3s ease-out;
    outline: none;
 
-  }
+  } */
+.available {
+    border-radius: 100%; 
+    width: 65px; 
+    height: 65px; 
+    border: none; 
+    margin: 5px; 
+    margin-top: 20px; 
+    margin-left: 20px; 
+    align-items: center; 
+    justify-content: center; 
+    cursor: cell;
+    transition: all 0.3s ease-out;
+    outline: none;
+    background-color:  #CCC;
+}
+
+
 
 .available:hover {
     background-color: #ADAAAA; 
+    cursor: cell;
 }
 
 .reserved {
     cursor: not-allowed; 
+    border-radius: 100%; 
+    width: 65px; 
+    height: 65px; 
+    border: none; 
+    margin: 5px; 
+    margin-top: 20px; 
+    margin-left: 20px; 
+    align-items: center; 
+    justify-content: center; 
+    background-color: #ADAAAA; 
+    color: #CCC; 
+    /* transition: all 0.3s ease-out;
+    outline: none; */
 }
 
 #form_container {
@@ -191,7 +222,7 @@ form{
     }
 
 
-    .table_button {
+   .available {
         border-radius: 100%; 
         width: 100px; 
         height: 100px; 
@@ -204,6 +235,31 @@ form{
         background-color: #CCC; 
      
     }
+
+    .available:hover {
+        background-color: #ADAAAA; 
+        cursor: cell;
+    }
+    
+
+    .reserved {
+        cursor: not-allowed;
+        border-radius: 100%; 
+        width: 100px; 
+        height: 100px; 
+        border: none; 
+        margin: 5px; 
+        margin-top: 20px; 
+        margin-left: 18px; 
+        align-items: center; 
+        justify-content: center;  
+        background-color: #ADAAAA; 
+        color: #CCC; 
+        /* transition: all 0.3s ease-out;
+        outline: none; */
+    }
+
+
 
     .pop-form {
         transform: translate(127%, -94%);
